--- a/gb/1/1/7/n30807.md
+++ b/gb/1/1/7/n30807.md
@@ -5,54 +5,55 @@
 <h6></h6>
 <hr>
 	<p>【大纪元1月7日电】据《中央社》彰化报导，国民党主席连战今天下午南下彰化县田中镇荣民之家拜访，连战向所有荣民拜早年并致赠红包。其中有不少老荣民对国民党失去政权，仍然感到相当心痛，不过仍不忘勉励连战，要让国民党再站起来。</p>
-<p>????<B><FONTCOLOR=red>相关文章</FONT></B><br /> ???? </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30535 target=_blank class=ltnn>国民党望县市长选战 望其谷底翻身</a> (1/6/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30424 target=_blank class=ltnn>陈履安夫妇今天办国民党员回复登记手续</a> (1/6/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30319 target=_blank class=ltnn>箝制陈水扁中国政策　林浊水周伯伦下周密商 </a> (1/5/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30148 target=_blank class=ltnn>连战发表:两岸邦联构想 </a> (1/5/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30140 target=_blank class=ltnn>蔡同荣发表文章：<<“邦联制”的抬头 >> </a> (1/5/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30136 target=_blank class=ltnn>台湾立委转述: 北京认邦联制可讨论 </a> (1/5/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30092 target=_blank class=ltnn>北京政府出新招: &#8220;特殊方式&#8221; 搞 &#8220;三通&#8221;</a> (1/5/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=29884 target=_blank class=ltnn>台湾重量级人士陈履安重返国民党</a> (1/5/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=29796 target=_blank class=ltnn>海协设宴表示: 台访问团此程并非真三通</a> (1/4/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=29746 target=_blank class=ltnn>连战倡两岸邦联制 大陆批是新“两国论”</a> (1/4/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=29639 target=_blank class=ltnn>台湾20多名立委4日抵达北京 </a> (1/4/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=29576 target=_blank class=ltnn>国民党新党籍立委访问团今天抵达北京</a> (1/4/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=29493 target=_blank class=ltnn> 国民党席次不再过半</a> (1/3/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=29228 target=_blank class=ltnn>林洋港说重回国民党不是反李势力结合</a> (1/3/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=28850 target=_blank class=ltnn>陈履安欲重回国民党 赵守博明拜访办复党手续</a> (1/2/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=28845 target=_blank class=ltnn>萧万长可能成为出席美总统就职典礼特使</a> (1/2/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=28606 target=_blank class=ltnn>连战新年三愿回归宪法 </a> (1/1/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=28587 target=_blank class=ltnn>2001读秒跨世纪全球夜未眠 &#8211; 综合报导</a> (1/1/2001)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=28472 target=_blank class=ltnn>台湾国民党员重登记 突破80万人</a> (12/31/2000)????
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=28280 target=_blank class=ltnn>国民党民调 五成四民众支持金马小三通</a> (12/31/2000)<br />
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30535" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">国民党望县市长选战 望其谷底翻身</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30424" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陈履安夫妇今天办国民党员回复登记手续</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30319" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">箝制陈水扁中国政策　林浊水周伯伦下周密商 </a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30148" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">连战发表:两岸邦联构想 </a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30140" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">蔡同荣发表文章：&gt; </a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30136" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾立委转述: 北京认邦联制可讨论 </a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30092" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">北京政府出新招: &#8220;特殊方式&#8221; 搞 &#8220;三通&#8221;</a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29884" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾重量级人士陈履安重返国民党</a> (1/5/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29796" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">海协设宴表示: 台访问团此程并非真三通</a> (1/4/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29746" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">连战倡两岸邦联制 大陆批是新“两国论”</a> (1/4/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29639" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾20多名立委4日抵达北京 </a> (1/4/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29576" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">国民党新党籍立委访问团今天抵达北京</a> (1/4/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29493" target="_blank" class="ltnn" rel="nofollow noopener noreferrer"> 国民党席次不再过半</a> (1/3/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=29228" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">林洋港说重回国民党不是反李势力结合</a> (1/3/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=28850" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">陈履安欲重回国民党 赵守博明拜访办复党手续</a> (1/2/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=28845" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">萧万长可能成为出席美总统就职典礼特使</a> (1/2/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=28606" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">连战新年三愿回归宪法 </a> (1/1/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=28587" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">2001读秒跨世纪全球夜未眠 &#8211; 综合报导</a> (1/1/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=28472" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">台湾国民党员重登记 突破80万人</a> (12/31/2000)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=28280" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">国民党民调 五成四民众支持金马小三通</a> (12/31/2000)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/1/n28587.md#1">2001读秒跨世纪全球夜未眠 - 综合报导</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/1/n28606.md#1">连战新年三愿回归宪法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/2/n28845.md#1">萧万长可能成为出席美总统就职典礼特使</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/2/n28850.md#1">陈履安欲重回国民党 赵守博明拜访办复党手续</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/25/n10588772.md#1" target="_blank">广州市“李一哲”炮打文革的闹剧</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/26/n10809856.md#1" target="_blank">严家伟：人间地狱，四川古蔺岔角滩</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537972.md#1">旅美台湾画家张家玮的岛屿之梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538781.md#1">【未解之谜】童言童语揭前世秘密 真相令人震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540970.md#1">【马克时空】十二日战争摧毁伊朗核能力 瓦解抵抗轴心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540705.md#1">【重播】众院议长约翰逊在保守派团体晚会演讲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540523.md#1">【时事金扫描】抹黑美军行动 女记者被川普点名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539733.md#1">火星表面惊现巨型“蜘蛛网” 古代水道证据？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539554.md#1">陆剧《长安的荔枝》突撤档 那尔那茜遭封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539550.md#1">中共被爆秘密派兵赴俄 专家揭中俄背后算计</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539257.md#1">《捍卫战士3》可能是最终章 独行侠面临生存危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540033.md#1">演员于清斌回应送外卖一事：行业寒冬没有戏拍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539600.md#1">打破婚变传闻 吴奇隆刘诗诗一家三口罕见同框</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540300.md#1">郑欣宜因伤退出《歌手2025》 网友呛节目组</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539794.md#1">丰田销量连三月创新高 美日中市场需求强劲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541283.md#1">为什么我们会爱上不爱我们的人？ 专家解析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539961.md#1">上厕所用再生或竹制卫生纸安全吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536363.md#1">前海豹突击队员讲授如何持之以恒地锻炼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536360.md#1">每日一颗巴西坚果 远离营养补充剂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/1/7/n30807.htm">连战拜早年访问彰化荣民之家</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/1/7/n30807.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
